--- a/src/Pokemon/PokemonPageLayout/PokemonFooter.scss
+++ b/src/Pokemon/PokemonPageLayout/PokemonFooter.scss
@@ -1,28 +1,31 @@
 @use "../../styles/variables";
 @use "sass:math";
 
-$num-rows: 40;
-$num-columns: 40;
+$num-rows: 7;
+$num-columns: 7;
 
 body {
   margin: 0;
 }
 
-#landing {
-  display: flex;
-  flex-direction: column;
+#pokemon-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 200px;
+  width: 200px;
 
   .row {
     width: 100%;
     display: flex;
     flex-direction: row;
   }
-  
+
   .tile, .sprite {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: math.div(100vw, $num-columns);
-    width: math.div(100vw, $num-columns);
+    height: math.div(200px, $num-columns);
+    width: math.div(200px, $num-columns);
   } 
 }
