--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,10 @@
-@import "styles/variables";
+@use "./variables";
 
 * {
   margin: 0;
 }
 
 body {
-  font-family: $theme-font;
+  font-family: variables.$theme-font;
   font-weight: bold;
 }
