--- a/src/Pokemon/react/NavigationHelper.scss
+++ b/src/Pokemon/react/NavigationHelper.scss
@@ -1,9 +1,24 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 1;
+    z-index: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+
 #fading-div {
+	animation-name: fadeIn;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-out;
+	animation-duration: 1s;
   position: absolute;
   height: 100%;
   width: 100%;
   background-color: #1c1f21;
+  opacity: 0;
   z-index: -1;
-  opacity: 1;
   transition: opacity 1s;
 }
