Center Landing Page Content
- Landing page now centers and is a static height and width

--- a/src/Pokemon/react/NavigationHelper.scss
+++ b/src/Pokemon/react/NavigationHelper.scss
@@ -3,9 +3,13 @@
     opacity: 1;
     z-index: 1;
   }
+  // Only move fading div back after fade
+  99% {
+    z-index: 1;
+  }
   100% {
     opacity: 0;
-    z-index: -1;
+    z-index: 0;
   }
 }
 
