--- a/src/Pokemon/PokemonMapLanding/PokemonMapLanding.scss
+++ b/src/Pokemon/PokemonMapLanding/PokemonMapLanding.scss
@@ -1,8 +1,21 @@
 @use "../../styles/variables";
 @use "sass:math";
 
-$num-rows: 40;
-$num-columns: 40;
+$tile-height: 30px;
+$tile-weight: 30px;
+
+#landing-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: repeat;
+  background-size: $tile-height $tile-weight;
+}
 
 #landing {
   position: relative;
@@ -19,7 +32,7 @@ $num-columns: 40;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: math.div(100vw, $num-columns);
-    width: math.div(100vw, $num-columns);
+    height: $tile-height;
+    width: $tile-weight;
   } 
 }
