Details for House
- allow different starts
- navigate with only redux for house instead of URL
- combine floor1 and floor2 with landing page

--- a/src/Pokemon/PokemonMapLanding/PokemonMapLanding.scss
+++ b/src/Pokemon/PokemonMapLanding/PokemonMapLanding.scss
@@ -4,7 +4,7 @@
 $tile-height: 30px;
 $tile-weight: 30px;
 
-#landing-container {
+#pokemon-page-container {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -17,7 +17,7 @@ $tile-weight: 30px;
   background-size: $tile-height $tile-weight;
 }
 
-#landing {
+#pokemon-page {
   position: relative;
   display: flex;
   flex-direction: column;
